0.33
Use Plexus Classworlds to simplify launcher scripts.
Switch from org.apache.tools.bzip2 to commons-compress (this project is still alive).
Updated the --apply-change task to detect full history diffs and abort.
Enabled cascading deletes in the --truncate-apidb task to minimise foreign key violations on new schema updates.
Updated all PostgreSQL database tasks to support IDENT authentication.

0.32
Change to Public Domain licence.
Re-factored all entity classes to use a CommonEntityData class to avoid duplication of code and simplify code re-use.
Significant re-factoring of many apidb tasks to use Spring JDBC Template functionality.
Added a --replicate-apidb task for extracting replication files based on PostgreSQL transaction ids.
Fixed PostgreSQL apidb COPY files to include changeset id.
Fixed the Windows launcher batch file to contain all libraries.
Added a --read-replication-interval task.
Updated XML writing tasks to ignore UTF-8 characters not supported by XML.
Included new Xerces XML library to provide proper support for UTF-16 surrogate pairs.
Added a --merge-replication-files task.
Added a --way-key task.
Added a --simplify-change task.
Added pom.xml for maven artifacts

0.31
Added a --remove-tags task.
Added JPF plugin support.
Updated the build scripts to use Ivy dependency management.
Added mutable entity support.
Added writeable dataset support.
Added apidb tasks that support both mysql and postgresql api databases.
Added a new --append-change task for combining full history changesets.

0.30
Added 0.6 support.
Enhanced the pgsql tasks and schema to support an optional "action" table.
Enhanced the pgsql schema to introduce a stored procedure called during every changeset application.
Enhanced the pgsql schema to include optional bbox and linestring columns on the way table.
Added ability to specify slipping map zoom and coordinates as arguments to the bounding box filter.