@@ -4,6 +4,7 @@ Switch from org.apache.tools.bzip2 to commons-compress (this project is still al
 Updated the --apply-change task to detect full history diffs and abort.
 Enabled cascading deletes in the --truncate-apidb task to minimise foreign key violations on new schema updates.
 Updated all PostgreSQL database tasks to support IDENT authentication.
+Removed local postgis distribution since it is available on repo1.maven.org now.
 
 0.32
 Change to Public Domain licence.
